background problem solved

--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,7 @@ section {
 .new-year-banner {
     /* outline: 5px solid green; */
     background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../images/Banner\ Image.png');
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 16px;
@@ -89,7 +89,7 @@ section {
 
 .welcome-container {
     background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url(../images/Vectorrr.png);
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 16px;
